[package]
name = "kanidm_sshkey_fetcher"
description = "Fetch SSH keys for multiple users from a Kanidm server"
version = "0.1.0"
authors = ["duskmoon (Campbell He) <kp.campbell.he@duskmoon314.com>"]
edition = "2024"
license = "MPL-2.0"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
kanidm_client = "1.8.1"
kanidm_proto = "1.8.1"
serde = { version = "1.0.228", features = ["derive"] }
shellexpand = "3.1.1"
tokio = { version = "1.48.0", features = ["rt"] }
toml = "0.9.8"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
